--- a/java/build.gradle
+++ b/java/build.gradle
@@ -1,24 +1,27 @@
-group 'be.pxl'
+group 'be.schelp'
 version '1.0-SNAPSHOT'
 
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.1.0'
+    }
+}
 
+apply plugin: 'org.junit.platform.gradle.plugin'
 apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'eclipse'
 
 sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
-jar {
-    baseName = 'tdd-course-exercise-3'
-    version = project.version
-}
-
 dependencies {
-    testCompile("junit:junit:4.12")
-    testCompile("org.assertj:assertj-core:3.5.2")
+    testCompile("org.junit.jupiter:junit-jupiter-api:5.1.0")
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.1.0")
+
+    testCompile("org.assertj:assertj-core:3.9.1")
 }
